
2009-05-16 Version 0.2

  * replace .debug section in executable rather than rename it. (only works
    if it is the last section).
  * support for field type LF_VFUNCTAB and symbol type S_CONSTANT used by DMC.
  * added stringview to autoexp.dat for full length text display.

2009-06-04 Version 0.3

  * static members' debug info was not correctly converted, causing debugger confusion
  * now works on executables compiled by DMC
    - added command line switch -C to disable some D feature and 
      to remove function name from local variables
    - added support for type LF_BITFIELD.
  * added fields __viewhelper to classes string and object
  * new addin dviewhelper.dll to display correctly terminated strings
    and derived object type

2009-06-05 Version 0.4

  * fixed crash when long is used as index or element type of dynamic or 
    associative arrays

2009-06-06 Version 0.5

  * fixed error in __viewhelper field of string type, that could screw up type info
  * added support for wstring and dstring
  * fixed problems with debug info inside library by combining debug info of different modules 
    into a single pseudo-module
  * now also replaces '.' by '@' in enumerator types for more consistent debug info

2009-06-07 Version 0.6

  * removed LF_DERIVED info from debug info, as it is inconsistent in DMD generated info
    with more than 4096 type entries

2009-06-08 Version 0.7

  * corrected number of field entries in classes or struct, because DMD miscounts private members

2009-06-11 Version 0.8

  * tweaked visualizer macros to detect uninitialized associative arrays and to limit expansion
    to arrays with less than 1024 entries
  * renamed data pointer member of dynamic arrays to "ptr" to be consistent with the array property
    in D.

2009-06-19 Version 0.9

  * fixed line number info at the end of a segment or when switching to another file 
    because of inline expansion
  * fixed line numbers > 32767 and sections with 0 line number entries
