@@ -64,3 +64,7 @@ Version history
     because of inline expansion
   * fixed line numbers > 32767 and sections with 0 line number entries
 
+2009-07-16 Version 0.10 unreleased yet
+
+  * entries LF_FRIENDCLS, LF_FRIENDFCN, LF_VBCLASS and LF_IVBCLASS written by DMC are now removed
+
